<resources>
    <string name="app_name">Konversi Mata Uang</string>
    <string name="awal">Pilih Mata Uang?</string>
    <string name="euro">Euro</string>
    <string name="usd">US Dollar</string>
    <string name="yen">Japanese Yen</string>
    <string name="riyal">Saudi Riyal</string>
    <string name="input">Nilai Mata Uang</string>
    <string name="konversi">Konversi</string>
    <string name="output">Nilai Rupiah: $s</string>
</resources>