<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <TextView
            android:id="@+id/awal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/awal"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/euro"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/awal"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <RadioButton
                android:id="@+id/euro"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:text="@string/euro" />

            <RadioButton
                android:id="@+id/usd"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/usd" />

            <RadioButton
                android:id="@+id/yen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yen" />

            <RadioButton
                android:id="@+id/riyal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/riyal" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input"
            app:layout_constraintStart_toStartOf="@+id/radio"
            app:layout_constraintTop_toBottomOf="@+id/radio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teksInput"
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/konversi"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/konversi"
            app:layout_constraintStart_toStartOf="@+id/input"
            app:layout_constraintTop_toBottomOf="@+id/input" />

        <TextView
            android:id="@+id/hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/konversi" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="31dp"
            android:layout_height="27dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_monetization_on_24" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="31dp"
            android:layout_height="27dp"
            app:layout_constraintBottom_toBottomOf="@+id/input"
            app:layout_constraintEnd_toStartOf="@+id/input"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/input"
            app:srcCompat="@drawable/ic_baseline_close_fullscreen_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>